--- a/Grocery List.html
+++ b/Grocery List.html
@@ -8,7 +8,7 @@
         <div class="containerfield">
             <header>
                 <img src="list.svg" alt="list" height="20"/>
-                <h3>My Grocery List</h3>
+                <h3>My Shopping List</h3>
                 <link rel="stylesheet" href="https://fonts.google.com/specimen/Oswald">
                 <link rel="stylesheet" href="site.css">
                 <input id="reset-button" type="button" onclick="reset()" value="Reset" />                       
@@ -18,7 +18,7 @@
                 <fieldset>
                     <section id="list-prep" class="transparent-border">
                         <strong>Custom Item:</strong><br/>
-                        <input type="text" id="item" placeholder="Type item here">
+                        <input type="text" id="item" placeholder="Type item here...">
                         <input type="button" onclick="changeText2()" value="Add" /><br/>
                         <br/><br/>
                         <strong>Frequently ordered items:</strong>
